--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "singleline": "^2.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
@@ -23,11 +24,11 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
+    "node": "^24.6.0",
+    "react-router-dom": "^7.8.1",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.1",
     "vite": "^7.1.2",
-    "zod": "^4.0.17",
-    "react-router-dom": "^7.8.1",
-    "node": "^24.6.0"
+    "zod": "^4.0.17"
   }
 }
